<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/nav_view"
    app:headerLayout="@layout/header"
    app:menu="@menu/menu_veterinario"
    android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainScroll"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombre"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre_veterinario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apellido"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apellido_veterinario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telefono"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telefono_veterinario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registroBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/actualizar"
                    android:textColor="@color/white" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>

